--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@slack/web-api": "^7.0.2",
     "@vercel/functions": "^2.0.0",
     "ai": "^4.1.46",
+    "dotenv": "^16.4.7",
     "exa-js": "^1.4.10",
     "zod": "^3.24.2"
   },
