--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.1.14",
     "@slack/web-api": "^7.0.2",
+    "@supabase/supabase-js": "^2.49.4",
     "@vercel/functions": "^2.0.0",
     "ai": "^4.1.46",
     "dotenv": "^16.4.7",
