--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "@vercel/node": "^5.2.1",
     "typescript": "^5.3.3",
     "vercel": "^41.6.2"
   }
